🚀 MAXIMUM SPEED: Optimize Atlas migration to match data generation performance
PERFORMANCE OPTIMIZATIONS APPLIED:

1. ⚡ Write Concern Optimization:
   - Changed from WriteConcern(w=0, j=False) to WriteConcern(w=0)
   - Pure unacknowledged writes (fire and forget) for maximum speed

2. 🔄 Direct Insert (No Processing Loop):
   - Eliminated document-by-document processing overhead
   - Direct batch insert without preparation loop
   - Reduced from ~50 lines of processing to 1 line

3. 🚀 Connection Pool Optimization:
   - Atlas pool size: 100-200 connections (matching data generator)
   - Min pool size: 20, Max idle time: 30s
   - Optimized for high concurrency

4. ⚡ Simplified Error Handling:
   - Reduced retry attempts from 5 to 2
   - Minimal delay (0.1s) instead of exponential backoff
   - Removed circuit breaker overhead
   - Silent duplicate handling for speed

5. 📦 Batch Size & Workers:
   - Batch size: 2000 (matching data generator)
   - Workers: 12 (matching data generator)
   - Consistent settings across both operations

6. 🎯 Removed Overhead:
   - Eliminated circuit breaker logic
   - Simplified retry mechanism
   - Minimal error logging
   - Direct insert without processing

EXPECTED RESULT: Atlas migration should now match data generation speed!
The migration now uses the same optimizations as data generation:
- Unacknowledged writes
- Direct batch inserts
- Optimized connection pools
- Minimal error handling overhead

--- a/.env_local.example
+++ b/.env_local.example
@@ -15,7 +15,7 @@ BATCH_SIZE=2000
 TOTAL_DOCUMENTS=10000000
 CONCURRENT_WORKERS=12
 
-# Migration Settings (OPTIMIZED for Atlas M40)
-MIGRATION_BATCH_SIZE=20000
-MIGRATION_WORKERS=16
+# Migration Settings (MAXIMUM SPEED OPTIMIZED)
+MIGRATION_BATCH_SIZE=2000
+MIGRATION_WORKERS=12
 RESUME_FROM_CHECKPOINT=true
