Production cleanup: Remove development files and temporary data
- Remove setup.py (development setup script)
- Remove quick_start.sh (interactive development script)
- Remove temporary cache files (count_cache.json, estimated_count_cache.json)
- Remove migration checkpoint file (migration_checkpoint.json)
- Remove large log files (data_generator.log, migration.log)
- Remove data dump file (cosmos_dump.gz)
- Update .gitignore to prevent future commits of these files

Production-ready codebase now contains only essential files:
- Core scripts: data_generator.py, migrate_to_atlas.py, test_connection.py
- Index management: extract_indexes_only.py, extract_and_create_indexes.py
- Shell scripts: dump_cosmos.sh, restore_to_atlas.sh
- Configuration: config.env, requirements.txt, README.md
- Models and compatibility: models.py, mongodb_compatibility.py

--- a/.gitignore
+++ b/.gitignore
@@ -316,6 +316,10 @@ data_generator.log
 count_cache.json
 estimated_count_cache.json
 
+# Development files
+setup.py
+quick_start.sh
+
 # Performance monitoring files
 *.prof
 *.profile
