--- a/.env_local.example
+++ b/.env_local.example
@@ -1,25 +1,104 @@
-# Azure Cosmos DB Configuration - SENSITIVE CREDENTIALS
-# Replace with your actual values
-COSMOS_DB_CONNECTION_STRING="mongodb://your-account:YOUR_PASSWORD@your-account.mongo.cosmos.azure.com:10255/?ssl=true&replicaSet=globaldb&retrywrites=false&maxIdleTimeMS=120000&appName=@your-account@"
-COSMOS_DB_NAME=your-database-name
-COSMOS_DB_COLLECTION=your-collection-name
+# =============================================================================
+# VOLVO SERVICE ORDERS DATA MIGRATION - ENVIRONMENT CONFIGURATION
+# =============================================================================
+# Copy this file to .env_local and fill in your actual credentials
+# NEVER commit .env_local to version control!
 
-# MongoDB Atlas Configuration - SENSITIVE CREDENTIALS
-# Replace with your actual values
-MONGODB_ATLAS_CONNECTION_STRING="mongodb+srv://your-username:YOUR_PASSWORD@your-cluster.mongodb.net/?retryWrites=false&w=majority&appName=YourCluster"
-MONGODB_ATLAS_DB_NAME=your-database-name
-MONGODB_ATLAS_COLLECTION=your-collection-name
+# =============================================================================
+# DATABASE CONFIGURATION - SENSITIVE CREDENTIALS
+# =============================================================================
 
-# Data Generation Settings (OPTIMIZED for MAXIMUM SPEED)
-BATCH_SIZE=2000
-TOTAL_DOCUMENTS=61000000
-CONCURRENT_WORKERS=12
-MAX_CONCURRENT_WORKERS=16
-MIN_CONCURRENT_WORKERS=4
+# SOURCE DATABASE (Azure Cosmos DB) - READ FROM
+GEN_DB_CONNECTION_STRING="mongodb://your-account:YOUR_PASSWORD@your-account.mongo.cosmos.azure.com:10255/?ssl=true&replicaSet=globaldb&retrywrites=false&maxIdleTimeMS=120000&appName=@your-account@"
+GEN_DB_NAME=volvo-service-orders
+GEN_DB_COLLECTION=serviceorders
+GEN_CURSOR_BATCH_SIZE=10000
 
-# Migration Settings (MAXIMUM SPEED OPTIMIZED)
-MIGRATION_BATCH_SIZE=4000
-MIGRATION_WORKERS=12
-MAX_CONCURRENT_WORKERS=16
-MIN_CONCURRENT_WORKERS=4
-RESUME_FROM_CHECKPOINT=true
+# TARGET DATABASE (MongoDB Atlas) - WRITE TO
+MIG_TARGET_DB_CONNECTION_STRING="mongodb+srv://your-username:YOUR_PASSWORD@your-cluster.mongodb.net/?retryWrites=false&w=0&appName=YourCluster"
+MIG_TARGET_DB_NAME=volvo-service-orders
+MIG_TARGET_DB_COLLECTION=serviceorders
+
+# =============================================================================
+# DATA GENERATION SETTINGS (GEN_ prefix)
+# =============================================================================
+
+# Basic Generation Settings
+GEN_BATCH_SIZE=40000
+GEN_TOTAL_DOCUMENTS=22000000
+
+# Worker Configuration
+GEN_WORKERS=8
+GEN_WRITE_WORKERS=16
+GEN_MAX_WORKERS=12
+GEN_MIN_WORKERS=4
+GEN_MAX_WRITE_WORKERS=24
+GEN_MIN_WRITE_WORKERS=8
+
+# Connection Pool Settings
+GEN_POOL_SIZE=400
+GEN_MAX_POOL_SIZE=600
+GEN_MIN_POOL_SIZE=100
+GEN_MAX_IDLE_TIME_MS=300000
+GEN_WARMUP_CONNECTIONS=30
+
+# Queue Settings
+GEN_QUEUE_MULTIPLIER=10
+GEN_WRITE_QUEUE_MULTIPLIER=10
+
+# Batch Aggregation Settings
+GEN_BATCH_AGGREGATION_SIZE=5
+GEN_BATCH_AGGREGATION_TIMEOUT_MS=200
+
+# RU Monitoring Settings
+GEN_RU_PER_DOCUMENT=6
+GEN_RU_CHECK_INTERVAL_SECONDS=10
+GEN_MONITORING_BATCH_INTERVAL=10
+GEN_PROGRESS_UPDATE_INTERVAL_BATCHES=10
+GEN_RU_THROTTLE_THRESHOLD=40000
+GEN_RU_THROTTLE_PERCENTAGE=90
+GEN_DISABLE_THROTTLING=true
+
+# Retry Logic Settings
+GEN_MAX_RETRIES=3
+GEN_BACKOFF_BASE_SECONDS=0.1
+
+# Performance Monitoring Settings
+GEN_PERFORMANCE_WINDOW_SIZE=20
+GEN_PERFORMANCE_CHECK_INTERVAL_SECONDS=30
+GEN_THROTTLING_THRESHOLD_PERCENTAGE=10
+GEN_SCALING_COOLDOWN_SECONDS=60
+GEN_SCALE_UP_COOLDOWN_SECONDS=30
+
+# Progress Bar Settings
+GEN_PROGRESS_SMOOTHING=0.1
+GEN_PROGRESS_MINITERS=1000
+
+# Document Size Estimation
+GEN_DOCUMENT_SIZE_KB=2.5
+GEN_DOCUMENT_SIZE_MULTIPLIER=1024
+
+# =============================================================================
+# MIGRATION SETTINGS (MIG_ prefix)
+# =============================================================================
+
+# Basic Migration Settings
+MIG_BATCH_SIZE=50000
+MIG_WORKERS=20
+MIG_MAX_WORKERS=30
+MIG_MIN_WORKERS=4
+MIG_PARALLEL_CURSORS=15
+MIG_RESUME_FROM_CHECKPOINT=false
+
+# ULTRA-FAST Migration Optimizations
+MIG_MAX_INSERT_WORKERS=50
+MIG_READ_AHEAD_BATCHES=15000
+MIG_READ_AHEAD_WORKERS=1
+MIG_MAX_CONCURRENT_BATCHES=30
+
+# Connection and Timeout Settings
+MIG_SOCKET_TIMEOUT_MS=60000
+MIG_CONNECT_TIMEOUT_MS=30000
+MIG_WARMUP_CONNECTIONS=500
+MIG_PROGRESS_UPDATE_INTERVAL_MS=25
+MIG_FAST_START=false
