feat: Complete code review and documentation updates
- Fixed flexible_generator.py argument parsing for list commands
- Updated all documentation with correct script names and examples
- Removed references to non-existent files (test_connection.py, data_generator.py, migrate_to_atlas.py)
- Fixed duplicate command line arguments in examples
- Verified all functionality works correctly
- Framework is now enterprise-ready with accurate documentation

Changes:
- README.md: Updated script references and examples
- FRAMEWORK_README.md: Updated script references
- flexible_generator.py: Fixed --source argument validation
- .env_local.example: Updated configuration examples
- Added comprehensive code review and testing

--- a/.env_local.example
+++ b/.env_local.example
@@ -1,104 +1,106 @@
 # =============================================================================
-# VOLVO SERVICE ORDERS DATA MIGRATION - ENVIRONMENT CONFIGURATION
+# VOLVO DATA FRAMEWORK - SIMPLIFIED CONFIGURATION
 # =============================================================================
-# Copy this file to .env_local and fill in your actual credentials
-# NEVER commit .env_local to version control!
+# 
+# This file demonstrates the new profile-based configuration system.
+# Instead of managing 100+ configuration parameters, you now only need to:
+# 1. Choose a profile (data-ingest, data-migration, or dev)
+# 2. Set your database connection strings
+# 3. Optionally override specific settings
+#
+# =============================================================================
 
 # =============================================================================
-# DATABASE CONFIGURATION - SENSITIVE CREDENTIALS
+# PROFILE SELECTION (REQUIRED)
+# =============================================================================
+# Choose one of three profiles based on your use case:
+#
+# data-ingest    - High-speed data generation (40k+ docs/s)
+# data-migration - High-speed migration with stability (4k-8k docs/s)  
+# dev           - Development and testing (minimal resources)
 # =============================================================================
 
-# SOURCE DATABASE (Azure Cosmos DB) - READ FROM
+FRAMEWORK_PROFILE=data-migration
+
+# =============================================================================
+# DATABASE CONFIGURATION (REQUIRED)
+# =============================================================================
+# These are the only required settings - everything else comes from the profile
+
+# Source Database (Cosmos DB)
 GEN_DB_CONNECTION_STRING="mongodb://your-account:YOUR_PASSWORD@your-account.mongo.cosmos.azure.com:10255/?ssl=true&replicaSet=globaldb&retrywrites=false&maxIdleTimeMS=120000&appName=@your-account@"
 GEN_DB_NAME=volvo-service-orders
 GEN_DB_COLLECTION=serviceorders
-GEN_CURSOR_BATCH_SIZE=10000
 
-# TARGET DATABASE (MongoDB Atlas) - WRITE TO
+# Target Database (MongoDB Atlas)
 MIG_TARGET_DB_CONNECTION_STRING="mongodb+srv://your-username:YOUR_PASSWORD@your-cluster.mongodb.net/?retryWrites=false&w=0&appName=YourCluster"
 MIG_TARGET_DB_NAME=volvo-service-orders
 MIG_TARGET_DB_COLLECTION=serviceorders
 
 # =============================================================================
-# DATA GENERATION SETTINGS (GEN_ prefix)
+# OPTIONAL OVERRIDES
 # =============================================================================
+# You can override any profile setting by adding it here.
+# For example, to use a larger batch size in dev mode:
 
-# Basic Generation Settings
-GEN_BATCH_SIZE=40000
-GEN_TOTAL_DOCUMENTS=22000000
-
-# Worker Configuration
-GEN_WORKERS=8
-GEN_WRITE_WORKERS=16
-GEN_MAX_WORKERS=12
-GEN_MIN_WORKERS=4
-GEN_MAX_WRITE_WORKERS=24
-GEN_MIN_WRITE_WORKERS=8
-
-# Connection Pool Settings
-GEN_POOL_SIZE=400
-GEN_MAX_POOL_SIZE=600
-GEN_MIN_POOL_SIZE=100
-GEN_MAX_IDLE_TIME_MS=300000
-GEN_WARMUP_CONNECTIONS=30
-
-# Queue Settings
-GEN_QUEUE_MULTIPLIER=10
-GEN_WRITE_QUEUE_MULTIPLIER=10
-
-# Batch Aggregation Settings
-GEN_BATCH_AGGREGATION_SIZE=5
-GEN_BATCH_AGGREGATION_TIMEOUT_MS=200
-
-# RU Monitoring Settings
-GEN_RU_PER_DOCUMENT=6
-GEN_RU_CHECK_INTERVAL_SECONDS=10
-GEN_MONITORING_BATCH_INTERVAL=10
-GEN_PROGRESS_UPDATE_INTERVAL_BATCHES=10
-GEN_RU_THROTTLE_THRESHOLD=40000
-GEN_RU_THROTTLE_PERCENTAGE=90
-GEN_DISABLE_THROTTLING=true
-
-# Retry Logic Settings
-GEN_MAX_RETRIES=3
-GEN_BACKOFF_BASE_SECONDS=0.1
-
-# Performance Monitoring Settings
-GEN_PERFORMANCE_WINDOW_SIZE=20
-GEN_PERFORMANCE_CHECK_INTERVAL_SECONDS=30
-GEN_THROTTLING_THRESHOLD_PERCENTAGE=10
-GEN_SCALING_COOLDOWN_SECONDS=60
-GEN_SCALE_UP_COOLDOWN_SECONDS=30
-
-# Progress Bar Settings
-GEN_PROGRESS_SMOOTHING=0.1
-GEN_PROGRESS_MINITERS=1000
-
-# Document Size Estimation
-GEN_DOCUMENT_SIZE_KB=2.5
-GEN_DOCUMENT_SIZE_MULTIPLIER=1024
+# MIG_BATCH_SIZE=5000
+# GEN_BATCH_SIZE=10000
 
 # =============================================================================
-# MIGRATION SETTINGS (MIG_ prefix)
+# PROFILE DESCRIPTIONS
 # =============================================================================
-
-# Basic Migration Settings
-MIG_BATCH_SIZE=50000
-MIG_WORKERS=20
-MIG_MAX_WORKERS=30
-MIG_MIN_WORKERS=4
-MIG_PARALLEL_CURSORS=15
-MIG_RESUME_FROM_CHECKPOINT=false
-
-# ULTRA-FAST Migration Optimizations
-MIG_MAX_INSERT_WORKERS=50
-MIG_READ_AHEAD_BATCHES=15000
-MIG_READ_AHEAD_WORKERS=1
-MIG_MAX_CONCURRENT_BATCHES=30
-
-# Connection and Timeout Settings
-MIG_SOCKET_TIMEOUT_MS=60000
-MIG_CONNECT_TIMEOUT_MS=30000
-MIG_WARMUP_CONNECTIONS=500
-MIG_PROGRESS_UPDATE_INTERVAL_MS=25
-MIG_FAST_START=false
+#
+# 🚀 data-ingest Profile:
+#   - Purpose: Maximum speed data generation
+#   - Batch Size: 40,000 documents
+#   - Workers: 16 generation, 24 write workers
+#   - Connection Pool: 600-800 connections
+#   - Use Case: High-volume data generation
+#
+# ⚡ data-migration Profile:
+#   - Purpose: High-speed migration with stability
+#   - Batch Size: 15,000 documents
+#   - Workers: 4 migration, 8 max workers
+#   - Connection Pool: 100 max connections (conservative)
+#   - Use Case: Reliable data migration
+#
+# 🧪 dev Profile:
+#   - Purpose: Development and testing
+#   - Batch Size: 2,000-5,000 documents
+#   - Workers: 2-4 workers
+#   - Connection Pool: 20 max connections
+#   - Use Case: Testing framework functionality
+#
+# =============================================================================
+# QUICK START EXAMPLES
+# =============================================================================
+#
+# 1. Development Testing:
+#    FRAMEWORK_PROFILE=dev
+#    # Set database connections above
+#    # Run: source venv/bin/activate && FRAMEWORK_PROFILE=dev python flexible_migrate.py --strategy user_defined/strategies/volvo_strategy.py
+#
+# 2. High-Speed Migration:
+#    FRAMEWORK_PROFILE=data-migration
+#    # Set database connections above
+#    # Run: source venv/bin/activate && FRAMEWORK_PROFILE=data-migration python flexible_migrate.py --strategy user_defined/strategies/volvo_strategy.py
+#
+# 3. High Speed Data Generation:
+#    FRAMEWORK_PROFILE=data-ingest
+#    # Set database connections above
+#    # Run: source venv/bin/activate && FRAMEWORK_PROFILE=data-ingest python flexible_generator.py --source user_defined/templates/service_orders/service_order_template.json
+#
+# =============================================================================
+# ADVANCED USAGE
+# =============================================================================
+#
+# To see all available profiles:
+# python -c "from framework.config.profiles import list_profiles; print(list_profiles())"
+#
+# To see profile details:
+# python -c "from framework.config.profiles import show_profile_info; print(show_profile_info('data-migration'))"
+#
+# To validate your configuration:
+# python -c "from framework.config.manager import config_manager; print(config_manager.validate_current_config())"
+#
+# =============================================================================
