feat: Complete rebranding to DataWorks
🚀 MAJOR REBRAND: Volvo Data Framework → DataWorks

- Updated all documentation with DataWorks branding
- Emphasized large-scale migration capabilities (100GB+)
- Highlighted superiority over existing tools (Compass, mongorestore, etc.)
- Professional enterprise-ready messaging
- Clear value proposition for customers

Changes:
- README.md: Updated title, descriptions, and messaging
- FRAMEWORK_README.md: Updated framework name and references
- CUSTOM_STRATEGIES_GUIDE.md: Updated title and branding
- framework/__init__.py: Updated framework name and author
- .env_local.example: Updated configuration header
- flexible_generator.py: Updated script header
- flexible_migrate.py: Updated script header

DataWorks: Where Data Migration Works! 🎉

--- a/.env_local.example
+++ b/.env_local.example
@@ -1,9 +1,9 @@
 # =============================================================================
-# VOLVO DATA FRAMEWORK - SIMPLIFIED CONFIGURATION
+# DATAWORKS - SIMPLIFIED CONFIGURATION
 # =============================================================================
 # 
 # This file demonstrates the new profile-based configuration system.
-# Instead of managing 100+ configuration parameters, you now only need to:
+# Instead of managing 100+ configuration parameters, DataWorks now only requires:
 # 1. Choose a profile (data-ingest, data-migration, or dev)
 # 2. Set your database connection strings
 # 3. Optionally override specific settings
