✨ Add DynamoDB and DocumentDB support
🎯 Enhanced Database Support:
• Added DynamoDB client with batch operations
• Added DocumentDB client with MongoDB compatibility
• Updated DatabaseType enum with new database types
• Enhanced factory function for multi-database support

📊 New Database Capabilities:
• DynamoDB Local and AWS DynamoDB support
• Amazon DocumentDB with MongoDB-compatible API
• Optimized connection settings for each database type
• Batch operations with database-specific optimizations

📚 Updated Documentation:
• Added DynamoDB and DocumentDB migration examples
• Updated README with multi-database support
• Added configuration examples for each database type
• Updated requirements.txt with boto3 dependency

🔧 Technical Improvements:
• Enhanced progress bar with additional statistics
• Fixed linting errors in database client
• Maintained backward compatibility
• Added proper error handling for new database types

🚀 Ready for enterprise multi-database migrations!

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,10 @@ dnspython>=1.16.0
 uvloop==0.19.0
 zstandard==0.25.0
 
+# Database Support Dependencies
+boto3>=1.26.0  # DynamoDB support
+botocore>=1.29.0  # AWS SDK core
+
 # Framework Additional Dependencies
 psutil>=5.9.0
 pyyaml>=6.0
